# learning_ffmpeg

./: .gitignore  CMakeLists.txt  README.md  main.cpp
